<resources>
    <string name="app_name">Challenger</string>
    <string name="headline_register_screen">Register</string>
    <string name="hint_country">Country</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">E-Mail Address</string>
    <string name="hint_street">Street</string>
    <string name="hint_house_number">House Number</string>
    <string name="hint_postal_code">ZIP</string>
    <string name="hint_town">Town</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_create_account">Create Account</string>
    <string name="hint_login">Log In</string>
    <string name="text_send">Send</string>
    <string name="text_correct">Correct</string>
    <string name="hint_signup">Sign Up</string>
    <string name="text_back">\u00AB Back</string>
</resources>